// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieListItemMenu should match snapshot with closed Toast Menu 1`] = `
<DocumentFragment>
  <div
    class="MovieListItemMenu"
  >
    <button
      class="MovieListItemMenu-Toggle"
      data-testid="movie-list-item-toggle"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MovieListItemMenu should match snapshot with open Toast Menu 1`] = `
<DocumentFragment>
  <div
    class="MovieListItemMenu"
  >
    <button
      class="MovieListItemMenu-Toggle"
      data-testid="movie-list-item-toggle"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
        />
      </svg>
    </button>
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="fade toast show showing"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <button
          aria-label="Close"
          class="btn-close"
          data-dismiss="toast"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        <ul
          class="MovieListItemMenu-Controls"
        >
          <li>
            <span
              class="Controls-Span"
            >
              Edit
            </span>
          </li>
          <li>
            <span
              class="Controls-Span"
            >
              Delete
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
